added (partial-)klu to DPsim MNASolver
Signed-off-by: Lennart Schumacher <lennart.schumacher@rwth-aachen.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,8 @@ endif()
 
 # WITH_SPARSE and WITH_CUDA can be combined
 option(WITH_SPARSE       	"Use sparse matrices in MNA-Solver"	ON )
+option(WITH_KLU 			"Build with KLU" 				ON )
+option(WITH_NICSLU 			"Build with NICSLU" 			ON )
 
 include(CMakeDependentOption)
 cmake_dependent_option(WITH_GSL     	"Enable GSL"                         	ON 	"GSL_FOUND"       	OFF)
@@ -250,6 +252,8 @@ if(TOPLEVEL_PROJECT)
 	add_feature_info(Graphviz  	WITH_GRAPHVIZ  		"Graphviz Graphs")
 	add_feature_info(Sundials  	WITH_SUNDIALS  		"Sundials solvers")
 	add_feature_info(PYBIND 	WITH_PYBIND 		"Use DPsim as a PYBIND module")
+	add_feature_info(KLU		WITH_KLU			"A sparse LU solver")
+	add_feature_info(NICSLU		WITH_NICSLU			"A sparse LU solver")
 	feature_summary(WHAT ALL VAR enabledFeaturesText)
 
 	if (FOUND_GIT_VERSION)
