--- a/models/Source/CMakeLists.txt
+++ b/models/Source/CMakeLists.txt
@@ -157,6 +157,16 @@ if(WITH_GSL)
 	list(APPEND CPS_LIBRARIES ${GSL_LIBRARIES})
 endif()
 
+if(WITH_KLU)
+	list(APPEND CPS_INCLUDE_DIRS ${KLU_INCLUDE_DIRS})
+	list(APPEND CPS_LIBRARIES ${KLU_LIBRARIES})
+endif()
+
+if(WITH_NICSLU)
+	list(APPEND CPS_INCLUDE_DIRS ${NICSLU_INCLUDE_DIRS})
+	list(APPEND CPS_LIBRARIES ${NICSLU_LIBRARIES})
+endif()
+
 target_link_libraries(cps PUBLIC ${CPS_LIBRARIES})
 target_include_directories(cps PUBLIC ${CPS_INCLUDE_DIRS})
 target_sources(cps PRIVATE ${CPS_SOURCES})
