added partial nicslu
Signed-off-by: Lennart Schumacher <lennart.schumacher@rwth-aachen.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ option(WITH_PYBIND_MODULE "Build with pybind11 as module" OFF)
 option(WITH_PROFILING "Add `-pg` profiling flag to compiliation" OFF)
 option(WITH_ASAN "Adds compiler flags to use the address sanitizer" OFF)
 option(WITH_TSAN "Adds compiler flags to use the thread sanitizer" OFF)
+option(WITH_NICSLU "Builds with NICSLU" OFF)
 option(CGMES_BUILD "Build with CGMES instead of CIM" OFF)
 
 find_package(Threads REQUIRED)
@@ -250,6 +251,7 @@ if(TOPLEVEL_PROJECT)
 	add_feature_info(Graphviz  	WITH_GRAPHVIZ  		"Graphviz Graphs")
 	add_feature_info(Sundials  	WITH_SUNDIALS  		"Sundials solvers")
 	add_feature_info(PYBIND 	WITH_PYBIND 		"Use DPsim as a PYBIND module")
+	add_feature_info(NICSLU		WITH_NICSLU		"A sparse parallel LU solver")
 	feature_summary(WHAT ALL VAR enabledFeaturesText)
 
 	if (FOUND_GIT_VERSION)
