--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -53,6 +53,13 @@ if(WITH_SPARSE)
 	)
 endif()
 
+if(WITH_NICSLU)
+	list(APPEND DPSIM_SOURCES
+		MNASolverEigenNICSLU.cpp
+		MNASolverEigenPartialNICSLU.cpp
+	)
+endif()
+
 if(WITH_CUDA)
 	list(APPEND DPSIM_INCLUDE_DIRS ${CUDA_INCLUDE_DIRS} ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 
