--- a/models/Source/CMakeLists.txt
+++ b/models/Source/CMakeLists.txt
@@ -128,6 +128,11 @@ if(WITH_CIM)
 	list(APPEND CPS_LIBRARIES ${CIMPP_LIBRARIES})
 endif()
 
+if(WITH_NICSLU)
+	list(APPEND CPS_INCLUDE_DIRS ${NICSLU_INCLUDE_DIRS})
+	list(APPEND CPS_LIBRARIES ${NICSLU_LIBRARIES})
+endif()
+
 if(WITH_PYTHON)
 	list(APPEND CPS_INCLUDE_DIRS ${Python_INCLUDE_DIRS})
 	list(APPEND CPS_LIBRARIES ${Python_LIBRARIES})
