make the dynamic MNA solver interface a pure C interface
this makes the interface even simpler to implement and enables
building solvers in any language that supports the C ABI (rust,
python, julia solvers become possible).
Signed-off-by: Niklas Eiling <niklas.eiling@eonerc.rwth-aachen.de>

--- a/Source/SolverPlugins/Example/Makefile
+++ b/Source/SolverPlugins/Example/Makefile
@@ -1,12 +1,12 @@
 
-CC = g++
+CC = gcc
 
 .PHONY: all
 
 all: plugin.so
 
-%.o : %.cpp
-	$(CC) $(CC_FLAGS) -I../dpsim/Include -c -fpic -o $@ $<
+%.o : %.c
+	$(CC) $(CC_FLAGS) -I../../../Include -c -fpic -o $@ $<
 
 plugin.so: example.o
 	$(CC) $(LD_FLAGS) -shared -o $@ $<
